<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/please"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/please"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="22sp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp" >

        <TextView
            android:id="@+id/totalQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_toRightOf="@+id/textView2"
            android:text="@string/totalQuestion"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="/"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/current_quiz_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/textView2"
            android:text="@string/current_quiz_num"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="50sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="30dp" >

        <Button
            android:id="@+id/left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:text="@string/prevbt"
            android:textSize="40sp" />

        <Button
            android:id="@+id/right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="#00000000"
            android:text="@string/nextbt"
            android:textSize="40sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/ans_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ans_text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/user_ans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/user_ans"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="top|center"
        android:layout_marginBottom="20dp" >

        <Button
            android:id="@+id/A"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="68dp"
            android:layout_weight="1.00"
            android:text="@string/choicebt0"
            android:textSize="26sp" />

        <Button
            android:id="@+id/B"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="68dp"
            android:layout_weight="1.00"
            android:text="@string/choicebt1"
            android:textSize="26sp" />

        <Button
            android:id="@+id/C"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="68dp"
            android:layout_weight="1.00"
            android:text="@string/choicebt2"
            android:textSize="26sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp" >

        <Button
            android:id="@+id/D"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="68dp"
            android:layout_weight="1.00"
            android:text="@string/choicebt3"
            android:textSize="26sp" />

        <Button
            android:id="@+id/E"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="66dp"
            android:layout_weight="1.00"
            android:text="@string/choicebt4"
            android:textSize="26sp" />

        <Button
            android:id="@+id/F"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="68dp"
            android:layout_weight="1.00"
            android:text="@string/choicebt5"
            android:textSize="26sp" />
    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="112dp"
        android:layout_height="50dp"
        android:layout_gravity="bottom|end"
        android:text="@string/submitbt"
        android:textSize="24sp" />

</LinearLayout>