<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wood"
    
    android:orientation="vertical" >

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/timer"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp" />

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp" >

        <TextView
            android:id="@+id/totalQuest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_toRightOf="@+id/textView2"
            android:text="0"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="/"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/currentQuest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/textView2"
            android:textColor="#FF00DDDD"
            android:text="1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="50sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/pause"
        android:layout_width="130dp"
        android:layout_height="95dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:text="Pause"
        android:background="@drawable/pause_button_selector"
        android:textSize="26sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="10dp" >

        <ImageView
            android:id="@+id/left"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:paddingBottom="0dp"
            android:src="@drawable/left_arrow"
            android:textSize="40sp" />

        <ImageView
            android:id="@+id/right"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/right_arrow"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="Your Answer"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView4"
            android:layout_centerHorizontal="true"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginBottom="20dp" >

        <Button
            android:id="@+id/A"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="68dp"
            android:layout_weight="1.00"
            android:text="@string/choicebt0"
            android:background="@drawable/choice_button_selector"
            android:textSize="26sp" />

        <Button
            android:id="@+id/B"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="68dp"
            android:layout_weight="1.00"
            android:text="@string/choicebt1"
            android:background="@drawable/choice_button_selector"
            android:textSize="26sp" />

        <Button
            android:id="@+id/C"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="68dp"
            android:layout_weight="1.00"
            android:text="@string/choicebt2"
            android:background="@drawable/choice_button_selector"
            android:textSize="26sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp" >

        <Button
            android:id="@+id/D"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="68dp"
            android:layout_weight="1.00"
            android:text="@string/choicebt3"
            android:background="@drawable/choice_button_selector"
            android:textSize="26sp" />

        <Button
            android:id="@+id/E"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="66dp"
            android:layout_weight="1.00"
            android:text="@string/choicebt4"
            android:background="@drawable/choice_button_selector"
            android:textSize="26sp" />

        <Button
            android:id="@+id/F"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="68dp"
            android:layout_weight="1.00"
            android:text="@string/choicebt5"
            android:background="@drawable/choice_button_selector"
            android:textSize="26sp" />
    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="112dp"
        android:layout_height="50dp"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="5dp"
        android:background="@drawable/submit_button_selector"
        android:text="@string/submitbt"
        android:textSize="24sp" />

</LinearLayout>